Make the flag for ResourceMonitor testable. https://bugs.webkit.org/show_bug.cgi?id=285366 rdar://142331749
Reviewed by Chris Dumez and Sihui Liu.

Make the flag `IFrameResourceMonitoringEnabled` to manage ResourceMonitor feature from `unstable`
to `internal` and enable it in test infrastructure by adding it TestOptions::defaults.

When enabling it, the bug was found that the frame could be disposed before ResourceMonitor is
disposed. Fix the bug by making `m_frame` as `WeakPtr` and check the validity before use.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebCore/loader/ResourceMonitor.cpp:
(WebCore::ResourceMonitor::setDocumentURL):
(WebCore::ResourceMonitor::didReceiveResponse):
(WebCore::ResourceMonitor::checkNetworkUsageExcessIfNecessary):
(WebCore::ResourceMonitor::parentResourceMonitorIfExists const):
(WebCore::ResourceMonitor::protectedFrame const): Deleted.
* Source/WebCore/loader/ResourceMonitor.h:
* Tools/WebKitTestRunner/TestOptions.cpp:
(WTR::TestOptions::defaults):

Canonical link: https://commits.webkit.org/288429@main

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -3510,7 +3510,7 @@ ICECandidateFilteringEnabled:
 
 IFrameResourceMonitoringEnabled:
   type: bool
-  status: unstable
+  status: internal
   category: networking
   condition: ENABLE(CONTENT_EXTENSIONS)
   defaultsOverridable: true
