--- a/Source/WebKit/GPUProcess/graphics/RemoteDisplayListRecorder.messages.in
+++ b/Source/WebKit/GPUProcess/graphics/RemoteDisplayListRecorder.messages.in
@@ -111,9 +111,9 @@ messages -> RemoteDisplayListRecorder Stream {
     EndPage()
 
 #if PLATFORM(COCOA) && ENABLE(VIDEO)
-    [EnabledBy=MediaPlaybackEnabled] DrawVideoFrame(struct WebKit::SharedVideoFrame frame, WebCore::FloatRect rect, struct WebCore::ImageOrientation orientation, bool shouldDiscardAlpha) NotStreamEncodable
-    [EnabledBy=MediaPlaybackEnabled] SetSharedVideoFrameSemaphore(IPC::Semaphore semaphore) NotStreamEncodable
-    [EnabledBy=MediaPlaybackEnabled] SetSharedVideoFrameMemory(WebCore::SharedMemory::Handle storageHandle) NotStreamEncodable
+    DrawVideoFrame(struct WebKit::SharedVideoFrame frame, WebCore::FloatRect rect, struct WebCore::ImageOrientation orientation, bool shouldDiscardAlpha) NotStreamEncodable
+    SetSharedVideoFrameSemaphore(IPC::Semaphore semaphore) NotStreamEncodable
+    SetSharedVideoFrameMemory(WebCore::SharedMemory::Handle storageHandle) NotStreamEncodable
 #endif
 }
 
