Followup to 288814@main — use `ScrollableArea::scrollOffset()` instead of manually computing scroll offset from position https://bugs.webkit.org/show_bug.cgi?id=285879
Reviewed by Abrar Rahman Protyasha and Megan Gardner.

Use `scrollOffset()` instead of `scrollOrigin() + scrollPosition()`, since the former is more
concise. Additionally rename `enclosingScroll{Position → Offset}` to reflect that this represents a
scroll offset (as opposed to a scroll position).

* Source/WebKit/Shared/EditorState.h:
* Source/WebKit/Shared/EditorState.serialization.in:
* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _reconcileEnclosingScrollViewContentOffset:]):
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::platformPopulateEditorStateIfNeeded const):
* Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::computeEnclosingLayerID const):

Canonical link: https://commits.webkit.org/288828@main

--- a/Source/WebKit/Shared/EditorState.serialization.in
+++ b/Source/WebKit/Shared/EditorState.serialization.in
@@ -61,7 +61,7 @@ struct WebKit::EditorState {
     std::optional<WebKit::EditorState::VisualData> visualData;
 };
 
-using WebCore::ScrollPosition = WebCore::IntPoint;
+using WebCore::ScrollOffset = WebCore::IntPoint;
 
 [Nested] struct WebKit::EditorState::PostLayoutData {
     OptionSet<WebKit::TypingAttribute> typingAttributes;
@@ -131,6 +131,6 @@ using WebCore::ScrollPosition = WebCore::IntPoint;
     std::optional<WebCore::ScrollingNodeID> enclosingScrollingNodeID;
     std::optional<WebCore::ScrollingNodeID> scrollingNodeIDAtStart;
     std::optional<WebCore::ScrollingNodeID> scrollingNodeIDAtEnd;
-    WebCore::ScrollPosition enclosingScrollPosition;
+    WebCore::ScrollOffset enclosingScrollOffset;
 #endif
 };
