iOS Safari "click" events have the "mouse" pointerType when triggered from touch https://bugs.webkit.org/show_bug.cgi?id=282988 rdar://139828481
Reviewed by Tim Horton.

282524@main made `click` a PointerEvent, but also introduced a small
PointerEvent spec incompliance, since the spec mandates that "If the
events are generated by a pointing device, their pointerId and
pointerType MUST be the same as the PointerEvents that caused these
events."

As it pertains to touch interactions, we dispatch resulting `click`
events when the single tap gesture recognizer makes the web page commit
a potential tap (and handling the associated synthetic click). Before
this commit, we blindly assumed that the `click` events being dispatched
had the "mouse" pointer type. This resulted in the titled bug.

However, the synthetic tap GR, which tracks the last active touch, also
knows what the last active touch type (i.e. UITouchType) was. This type
maps reasonably well to the pointer types in question (direct --> touch,
stylus --> pen, others --> mouse). These types are then plumbed through
the GR's action to the rest of WebKit's tap/synthetic click handling
code.

* LayoutTests/pointerevents/ios/pointer-type-attribute-on-stylus-tap-expected.txt: Added.
* LayoutTests/pointerevents/ios/pointer-type-attribute-on-stylus-tap.html: Added.
* LayoutTests/pointerevents/ios/pointer-type-attribute-on-touch-tap-expected.txt: Added.
* LayoutTests/pointerevents/ios/pointer-type-attribute-on-touch-tap.html: Added.
  Tests to check whether touch tap / stylus tap on an element generates
  the correct set of events (and PointerType attributes).
* LayoutTests/resources/ui-helper.js:
(window.UIHelper.stylusTapOnElement):
* Source/WebCore/dom/PointerEventTypeNames.h:
* Source/WebCore/platform/PlatformMouseEvent.h:
(WebCore::PlatformMouseEvent::PlatformMouseEvent):
* Source/WebKit/UIProcess/WebPageProxy.h:
* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _singleTapRecognized:]):
* S

--- a/Source/WebKit/WebProcess/WebPage/WebPage.messages.in
+++ b/Source/WebKit/WebProcess/WebPage/WebPage.messages.in
@@ -70,7 +70,7 @@ messages -> WebPage WantsAsyncDispatchMessage {
 
     AttemptSyntheticClick(WebCore::IntPoint point, OptionSet<WebKit::WebEventModifier> modifiers, WebKit::TransactionID lastLayerTreeTransactionId)
     PotentialTapAtPosition(WebKit::TapIdentifier requestID, WebCore::FloatPoint point, bool shouldRequestMagnificationInformation)
-    CommitPotentialTap(OptionSet<WebKit::WebEventModifier> modifiers, WebKit::TransactionID lastLayerTreeTransactionId, WebCore::PointerID pointerId)
+    CommitPotentialTap(OptionSet<WebKit::WebEventModifier> modifiers, WebKit::TransactionID lastLayerTreeTransactionId, WebCore::PointerID pointerId, String pointerType)
     CancelPotentialTap()
     TapHighlightAtPosition(WebKit::TapIdentifier requestID, WebCore::FloatPoint point)
     DidRecognizeLongPress()
