[WebAudio] Implement AudioContext::outputLatency https://bugs.webkit.org/show_bug.cgi?id=285826 rdar://142794341
Reviewed by Youenn Fablet.

Add implementation for Cocoa platforms, other platforms will return 0 for now.

* LayoutTests/imported/w3c/web-platform-tests/webaudio/idlharness.https.window-expected.txt:
* Source/WebCore/Modules/webaudio/AudioContext.cpp:
(WebCore::AudioContext::outputLatency):
* Source/WebCore/Modules/webaudio/AudioContext.h:
* Source/WebCore/Modules/webaudio/AudioContext.idl:
* Source/WebCore/Modules/webaudio/DefaultAudioDestinationNode.cpp:
(WebCore::DefaultAudioDestinationNode::outputLatency const):
* Source/WebCore/Modules/webaudio/DefaultAudioDestinationNode.h:
* Source/WebCore/platform/audio/AudioDestination.h:
(WebCore::AudioDestination::outputLatency const):
* Source/WebCore/platform/audio/AudioSession.h:
* Source/WebCore/platform/audio/SharedAudioDestination.cpp:
(WebCore::SharedAudioDestinationAdapter::outputLatency const):
(WebCore::SharedAudioDestinationAdapter::protectedDestination const):
(WebCore::SharedAudioDestination::outputLatency const):
(WebCore::SharedAudioDestination::protectedOutputAdapter const):
(WebCore::SharedAudioDestinationAdapter::protectedDestination): Deleted.
(WebCore::SharedAudioDestination::protectedOutputAdapter): Deleted.
* Source/WebCore/platform/audio/SharedAudioDestination.h:
* Source/WebCore/platform/audio/cocoa/AudioDestinationCocoa.cpp:
(WebCore::AudioDestinationCocoa::outputLatency const):
* Source/WebCore/platform/audio/cocoa/AudioDestinationCocoa.h:
* Source/WebCore/platform/audio/cocoa/AudioOutputUnitAdaptor.cpp:
(WebCore::AudioOutputUnitAdaptor::outputLatency const):
* Source/WebCore/platform/audio/cocoa/AudioOutputUnitAdaptor.h:
* Source/WebCore/platform/audio/ios/AudioSessionIOS.h:
* Source/WebCore/platform/audio/ios/AudioSessionIOS.mm:
(WebCore::AudioSessionIOS::outputLatency const):
* Source/WebCore/platform/audio/mac/AudioSessionMac.h:
* Source/WebCore/platform/audio/mac/AudioSessionMac.

--- a/Source/WebKit/WebProcess/GPU/media/RemoteAudioSessionConfiguration.serialization.in
+++ b/Source/WebKit/WebProcess/GPU/media/RemoteAudioSessionConfiguration.serialization.in
@@ -29,12 +29,13 @@ struct WebKit::RemoteAudioSessionConfiguration {
     size_t numberOfOutputChannels;
     size_t maximumNumberOfOutputChannels;
     size_t preferredBufferSize;
+    size_t outputLatency;
     bool isMuted;
     bool isActive;
     String sceneIdentifier;
     WebCore::AudioSessionSoundStageSize soundStageSize;
 };
-    
+
 #endif
 
 #if ENABLE(GPU_PROCESS) && PLATFORM(IOS_FAMILY)
