Add a runtime flag for mutation events https://bugs.webkit.org/show_bug.cgi?id=286050
Reviewed by Anne van Kesteren.

Added a runtime flag for DOM mutation events so that they can be disabled at runtime.

* LayoutTests/fast/dom/mutation-events-disablement-expected.txt: Added.
* LayoutTests/fast/dom/mutation-events-disablement.html: Added.
* LayoutTests/fast/dom/mutation-events-enablement-expected.txt: Added.
* LayoutTests/fast/dom/mutation-events-enablement.html: Added.
* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebCore/dom/CharacterData.cpp:
(WebCore::CharacterData::dispatchModifiedEvent):
* Source/WebCore/dom/ContainerNode.cpp:
(WebCore::dispatchChildInsertionEvents):
* Source/WebCore/dom/Document.cpp:
(WebCore::Document::Document):
* Source/WebCore/dom/ShouldNotFireMutationEventsScope.h:
(WebCore::ShouldNotFireMutationEventsScope::ShouldNotFireMutationEventsScope):
(WebCore::ShouldNotFireMutationEventsScope::~ShouldNotFireMutationEventsScope):

Canonical link: https://commits.webkit.org/288994@main

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -5262,6 +5262,18 @@ MouseEventsSimulationEnabled:
     WebCore:
       default: false
 
+MutationEventsEnabled:
+  type: bool
+  status: mature
+  humanReadableName: "DOM mutation events"
+  defaultValue:
+    WebKitLegacy:
+      default: true
+    WebKit:
+      default: true
+    WebCore:
+      default: true
+
 MuteCameraOnMicrophoneInterruptionEnabled:
   type: bool
   status: internal
